# starterCode

./: CMakeLists.txt  README.md
Vulkan/: CMakeLists.txt
src/: BPShader.cpp  BPShader.h  CMakeLists.txt  SceneContainer.h  SceneLoader.h  SceneParser_JSON.cpp  camera.h  fbMain.cpp  framebuffer.cpp  framebuffer.h  hitRecord.h  hittableList.h  lambertianShader.cpp  lambertianShader.h  light.h  mirrorShader.cpp  mirrorShader.h  normalShader.cpp  normalShader.h  perspectiveCamera.h  ray.h  scene.h  shader.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  vec3.h
utests/: CMakeLists.txt  utest_ray.cpp  utest_shape.cpp  utest_vec3.cpp
